--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -13,7 +13,14 @@
 
 @media screen and (max-width: 768px) {
 	.place__image {
-		width: clamp(340px, 100%, 100%);
+		width: clamp(320px, 100%, 340px);
+	}
+}
+
+@media screen and (max-width: 600px) {
+	.place__image {
+		width: 100%;
+		object-fit: cover;
 	}
 }
 
