--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -11,7 +11,7 @@
 
 @media screen and (max-width: 768px) {
 	.place__title {
-		max-width: calc(100% - 2*16px);
+		max-width: calc(100% - 10px);
 		font-size: 42px;
 		line-height: 46px;
 	}
